# perfmetrics-rust

./: Cargo.toml  compass.yml  wrapper.h
.knowledge/: .knowledge.json  Cargo.toml.json  build.rs.json  src_config_mod.rs.json  src_config_validation.rs.json  src_ffi_mod.rs.json  src_handlers_browser_metric_handler.cpp.json  src_handlers_browser_metric_handler.h.json  src_handlers_browser_metric_handler.rs.json  src_handlers_mod.rs.json  src_lib.rs.json  src_observable_metrics.rs.json  src_observable_mod.rs.json  src_plugin_mod.rs.json  src_traits_mod.rs.json  wrapper.h.json
src/: lib.rs
src/config/: mod.rs  validation.rs
src/ffi/: mod.rs
src/handlers/: browser_metric_handler.cpp  browser_metric_handler.h  browser_metric_handler.rs  mod.rs
src/observable/: metrics.rs  mod.rs
src/plugin/: mod.rs
src/traits/: mod.rs
